...
            android:id="@+id/action_home"
            android:enabled="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="home"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_tabs"
            android:enabled="true"
            android:icon="@drawable/ic_widgets_black_24dp"
            android:title="tabs"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_profile"
            android:enabled="true"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="profile"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/action_options"
            android:enabled="true"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="notifications"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/action_search"
            android:enabled="true"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="search"
            app:showAsAction="ifRoom" />
</menu>
