...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="match_parent">
        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusableInTouchMode="true"
                android:orientation="vertical">
...
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:background="#d5d5d5"/>
            </LinearLayout>
            <!--<Button
                    android:id="@+id/google_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:backgroundTint="@color/whitePrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_google_logo"
                    android:text="Continue with Google"
...
