...
                            android:layout_gravity="top"
                            android:orientation="horizontal">
                        <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:id="@+id/user_text"
                                android:background="#fff"
                                android:hint="@string/search_hint"
                                android:padding="10dp"
                                android:layout_weight="1"/>
                        <com.google.android.material.button.MaterialButton
                                style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:backgroundTint="#FFF"
                                app:icon="@drawable/ic_search_black_24dp"
                                app:rippleColor="#FFF"
                                app:iconTint="@color/redPrimary"
                                android:id="@+id/search_user"/>
                    </LinearLayout>
                    <TextView
                            android:layout_width="wrap_content"
                            android:padding="20dp"
                            android:id="@+id/no_users"
                            android:layout_gravity="center_horizontal"
...
